[ADD] add river center window shortcut & change graphiteangle to graphitex

--- a/.config/leaderkey/config.json
+++ b/.config/leaderkey/config.json
@@ -112,6 +112,12 @@
           "label" : "Right Window",
           "type" : "url",
           "value" : "kmtrigger://macro=River_WindowRight"
+        },
+        {
+          "key" : "s",
+          "label" : "RiverCenter Window",
+          "type" : "url",
+          "value" : "kmtrigger://macro=River_WindowRiverCenter"
         }
       ],
       "key" : "w",
