[ADD] make F keys usable in leaderkey

--- a/.config/leaderkey/config.json
+++ b/.config/leaderkey/config.json
@@ -171,6 +171,11 @@
       "key" : "z",
       "label" : "Manage Window",
       "type" : "group"
+    },
+    {
+      "key" : "",
+      "type" : "url",
+      "value" : "https://www.theverge.com/"
     }
   ],
   "type" : "group"
