--- a/.config/zed/settings.json
+++ b/.config/zed/settings.json
@@ -13,6 +13,7 @@
 
 {
   // "vim_mode": false,
+  "vim_mode": true,
   "soft_wrap": "preferred_line_length",
   "preferred_line_length": 128,
   "telemetry": {
@@ -34,5 +35,7 @@
   },
   "buffer_font_family": "JetBrains Mono", // default: Zed Plex Mono
   "buffer_font_size": 16,
-  "cursor_shape": "block"
+  "cursor_shape": "block",
+  "tab_size": 4,
+  "relative_line_numbers": "enabled"
 }
